# xdapp-book

./: .gitignore  .gitmodules  404.html  CNAME  LICENSE  README.md  book.toml  index.html  print.html  searchindex.js  searchindex.json  todo.md
.github/workflows/: deploy.yml
.obsidian/: graph.json  workspace.json
dapps/: 0_xdappOverview.html  1_defiBasics.html  2_crossChainInteroperability.html  3_xdataxassets.html  4_whatIsanXdapp.html  5_advantages.html
dapps/architecture/: 0_dappDesign.html  1_keyConsiderations.html  2_ecosystems.html  3_protocolDesign.html  4_topology.html  5_relayers.html
diagrams/raw/: doubleAcknowledgement.excalidraw
introduction/: introduction.html
projects/: usage.txt
projects/champion-draft/: .gitignore  .gitmodules  README.md  deploy.sh  evm-deploy.mjs  package-lock.json  startServer.sh
projects/champion-draft/chains/solana/programs/core_game/: Cargo.toml
projects/champion-draft/chains/solana/programs/core_game/src/: constants.rs  context.rs  data.rs  errors.rs  lib.rs  util.rs  wormhole.rs
projects/champion-draft/chains/solana/programs/wormhole-solana-sdk/: Cargo.toml
projects/champion-draft/chains/solana/programs/wormhole-solana-sdk/src/: context.rs  error.rs  lib.rs
projects/evm-messenger/: .gitignore  README.md  linux_wh.sh  orchestrator.js  package-lock.json  package.json  wormhole.sh  xdapp.config.json
projects/evm-tokenbridge/: .gitignore  README.md  package.json  treasury.js  xdapp.config.json
projects/messenger/: .gitignore  README.md  example.xdapp.config.json  messenger.js  orchestrator.ts  package-lock.json  package.json  tsconfig.json  xdapp.config.json
projects/messenger-v2/: README.md  cli.ts  package.json  xdapp.config.json
projects/messenger/chains/solana/programs/solana/: Cargo.toml
projects/messenger/chains/solana/programs/solana/src/: context.rs  error.rs  lib.rs  wormhole.rs
projects/sdkjs/: .gitignore
projects/wormhole-local-validator/: .gitignore  README.md  algorand-app-deploy.sh  algorand.bash  aptos.bash  evm.bash  evm.sh  evm0.sh  evm1.sh  guardiand.bash  guardiand.sh  package-lock.json  package.json  setup.bash  setup.sh  signers.env  solana-binary-deploy.bash  solana.bash  solana.sh  spy.bash  spy_guardiand.bash  wormhole.bash  wormhole.sh
projects/xdapp-starter/: README.md
projects/xid/: README.md  orchestrator.ts  package.json  xdapp.config.json
projects/xmint/: .gitignore  README.md  orchestrator.ts  package.json  tsconfig.json  vaa.u8  xdapp.config.json
projects/xmint/chains/solana/programs/solana/: Cargo.toml
projects/xmint/chains/solana/programs/solana/src/: account.rs  constant.rs  context.rs  error.rs  lib.rs  portal.rs  wormhole.rs
reference/: contracts.html  glossary.html  overview.html  rpcnodes.html  usefulLinks.html
scripts/: wormhole_linux.sh
src/: SUMMARY.md
src/dapps/: 0_xdappOverview.md  1_defiBasics.md  2_crossChainInteroperability.md  3_xdataxassets.md  4_whatIsanXdapp.md  5_advantages.md  advantages.md  advantages.ms  crossChainInteroperability.md  defiBasics.md  whatIsanXdapp.md  xdappOverview.md  xdataxassets.md
src/development/: guardiand.md  overview.md  wormhole-local-validator.md
src/introduction/: introduction.md  xdapp.md
src/misc/: doubleAck.md
src/projects/: summary.md
src/reference/: contracts.md  finality.md  github.md  (+5 more)
technical/: overview.html
theme/: book.js  highlight.css  highlight.js  index.hbs
wormhole/: 0_wormholeOverview.html  1_whatIsWormhole.html  2_architectureOverview.html  3_coreLayerContracts.html  4_vaa.html  5_guardianNetwork.html  6_relayers.html  7_xAssetBridge.html  8_wormchain.html  security.html
(+265 files in other folders)
