[package]
name = "messenger"
version = "0.1.0"
description = "Simple messenger xdapp"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
sha3 = "0.10.1"
byteorder = "1.4.3"
borsh = "0.9.3"
hex = "0.4.3"