[package]
name = "solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
mpl-token-metadata = {version = "1.3.6", features = ["no-entrypoint"]}
sha3 = "0.10.1"
byteorder = "1.4.3"
borsh = "0.9.3"
primitive-types = { version = "0.11.1", default-features = false }
bstr = "0.2.16"
